# search-server

./: .env.example  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/search/: __init__.py  demo.py  server.py
src/search/proxy/: bocha_search.py  brave_search.py  example_bocha.py  example_metaso.py  metaso_search.py
src/search/proxy/bocha/: __init__.py  api_doc.md  client.py  config.py  exceptions.py  requirements.txt
src/search/proxy/brave/: __init__.py  client.py  config.py  exceptions.py
src/search/proxy/metaso/: README.md  __init__.py  client.py  config.py  constants.py  exceptions.py  requirements.txt  response_handler.py
