[project]
name = "search-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.2.1",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.9.3",
    "playwright>=1.35.0",
    "asyncio>=3.4.3",
    "typing-extensions>=4.7.1",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search"]

[project.scripts]
search = "search:main"